--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
-language: node_js
+version: ~> 1.0
 
-node_js:
-  - "12"
-  - "14"
-  - "node"
 
-sudo: false
+import:
+  - hapijs/ci-config-travis:node_js.yml@main
+  - hapijs/ci-config-travis:install.yml@main
+  - hapijs/ci-config-travis:os.yml@main
