--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     ]
   },
   "dependencies": {
-    "@hapi/hoek": "^9.0.0",
-    "@hapi/topo": "^5.0.0"
+    "@hapi/hoek": "^10.0.0",
+    "@hapi/topo": "^6.0.0"
   },
   "devDependencies": {
-    "@hapi/bourne": "2.x.x",
-    "@hapi/code": "8.x.x",
+    "@hapi/bourne": "^3.0.0",
+    "@hapi/code": "^9.0.0",
     "@hapi/eslint-plugin": "*",
-    "@hapi/lab": "24.x.x"
+    "@hapi/lab": "25.0.0-beta.1"
   },
   "scripts": {
     "test": "lab -t 100 -a @hapi/code -L",
