--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     ]
   },
   "dependencies": {
-    "@hapi/hoek": "^10.0.0",
-    "@hapi/topo": "^6.0.0"
+    "@hapi/hoek": "^11.0.2",
+    "@hapi/topo": "^6.0.1"
   },
   "devDependencies": {
     "@hapi/bourne": "^3.0.0",
-    "@hapi/code": "^9.0.0",
+    "@hapi/code": "^9.0.3",
     "@hapi/eslint-plugin": "*",
-    "@hapi/lab": "25.0.0-beta.1"
+    "@hapi/lab": "^25.1.2"
   },
   "scripts": {
     "test": "lab -t 100 -a @hapi/code -L",
