chore: pin eslint-plugin

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {
     "@hapi/bourne": "^3.0.0",
     "@hapi/code": "^9.0.3",
-    "@hapi/eslint-plugin": "*",
+    "@hapi/eslint-plugin": "^6.0.0",
     "@hapi/lab": "^25.1.2"
   },
   "scripts": {
