--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "devDependencies": {
     "@hapi/bourne": "^3.0.0",
     "@hapi/code": "^9.0.3",
-    "@hapi/eslint-plugin": "*",
-    "@hapi/lab": "^25.1.2"
+    "@hapi/eslint-plugin": "^7.0.0",
+    "@hapi/lab": "^26.0.0"
   },
   "scripts": {
     "test": "lab -t 100 -a @hapi/code -L",
